<resources>
    <string name="app_name">GameEngine</string>
    <string name="up_button">up button</string>
    <string name="left_button">left button</string>
    <string name="down_button">down button</string>
    <string name="triangle_button">triangle button</string>
    <string name="square_button">square button</string>
    <string name="circle_button">circle button</string>
    <string name="x_button">x button</string>
</resources>
