<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btnUp"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/up_button"
            android:src="@drawable/ic_pad_up" />

        <ImageButton
            android:id="@+id/btnLeft"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnUp"
            android:layout_toLeftOf="@+id/btnUp"
            android:layout_toStartOf="@+id/btnUp"
            android:contentDescription="@string/left_button"
            android:src="@drawable/ic_pad_left" />

        <ImageButton
            android:id="@+id/btnRight"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnUp"
            android:layout_toEndOf="@+id/btnUp"
            android:layout_toRightOf="@+id/btnUp"
            android:contentDescription="@string/up_button"
            android:src="@drawable/ic_pad_right" />

        <ImageButton
            android:id="@+id/btnDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLeft"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/down_button"
            android:src="@drawable/ic_pad_down" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btnTriangle"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/triangle_button"
            android:src="@drawable/ic_pad_up" />

        <ImageButton
            android:id="@+id/btnSquare"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnTriangle"
            android:layout_toLeftOf="@+id/btnTriangle"
            android:layout_toStartOf="@+id/btnTriangle"
            android:contentDescription="@string/square_button"
            android:src="@drawable/ic_pad_left" />

        <ImageButton
            android:id="@+id/btnCircle"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnTriangle"
            android:layout_toEndOf="@+id/btnTriangle"
            android:layout_toRightOf="@+id/btnTriangle"
            android:contentDescription="@string/circle_button"
            android:src="@drawable/ic_pad_right" />

        <ImageButton
            android:id="@+id/btnX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSquare"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/x_button"
            android:src="@drawable/ic_pad_down" />
    </RelativeLayout>
</LinearLayout>
